# boox-template-generator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DOCKER_SETUP.md  DOCKER_UPDATE_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  NAVIGATION_IMPLEMENTATION_SPEC.md  NESTED_SECTIONS_IMPLEMENTATION.md  PDF_JOB_ISOLATION_SUMMARY.md  PHASE0_SUMMARY.md  PHASE1_USER_MIGRATION_SUMMARY.md  README.md  README_WEB_INTERFACE.md  SERVICE_MANAGEMENT.md  STATUS.md  SUMMARY.md  TUTORIAL.md  check_dpi.py  cleanup_legacy_properties.py  create_admin_user.py  debug_user_auth.py  doc  docker-compose.yml  eink-backend.service  eink-frontend.service  manage-services.sh  migrate_orphaned_projects.py  package-lock.json  pyproject.toml  test_api_login.py  test_nested_sections.py  test_page_limit.py  test_sibling_collision.py  test_variable_collision.py  (+1 more)
.claude/: settings.local.json
backend/: alembic.ini  docker-entrypoint.sh  migrate_users_to_db.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 29e8204f390a_initial_schema_for_multi_user_system.py  3b2e8a4f1d6b_add_pdf_job_diagnostics.py
backend/app/: __init__.py  auth.py  config.py  core_services.py  main.py  models.py  services.py  utils.py  websockets.py  workspaces.py
backend/app/api/: __init__.py  admin.py  assets.py  auth.py  auth_db.py  compile.py  pdf.py  pdf_jobs.py  profiles.py  projects.py  public.py  templates.py
backend/app/db/: __init__.py  auth_service.py  dependencies.py  jwt_service.py  models.py
backend/app/services/: __init__.py  pdf_job_service.py  pdf_worker.py
backend/data/templates/: 447cf351-32c7-41ed-9dd7-97eb21711f15.yaml  a7c5b29a-4210-49dd-b30f-d97ced1815d5.yaml  e0331205-10a5-4e30-bef0-b7d12d048282.yaml  index.json
backend/scripts/: add_is_admin_column.py  make_admin.py
config/profiles/: boox-go-10.3.yaml  boox-go-color-7-landscape.yaml  boox-go-color-7-portrait.yaml  boox-max-13.yaml  boox-note-air-3c.yaml  boox-note-air-4c-landscape.yaml  boox-note-air-4c-letter.yaml  boox-note-air-4c.yaml  boox-page.yaml  boox-tab-mini-c.yaml  boox-tab-ultra-c-landscape.yaml  boox-tab-ultra-c-portrait.yaml  boox-tab-ultra-c.yaml  kindle-paperwhite.yaml  kindle-scribe.yaml  kobo-clara-2e.yaml  kobo-elipsa-2e.yaml  kobo-libra-2.yaml  kobo-sage.yaml  remarkable-1.yaml  remarkable-2.yaml  remarkable-paper-pro-move-landscape.yaml  remarkable-paper-pro-move-portrait.yaml  remarkable-paper-pro.yaml  supernote-a5x.yaml  supernote-a6x.yaml  supernote-manta.yaml  supernote-nomad.yaml
docs/: DOCKER.md  DOCKER_SETUP.md  DOCKER_UPDATE_SUMMARY.md  IMPLEMENTATION_PLAN_NAVIGATION_TOKENS.md  IMPLEMENTATION_REVIEW.md  MULTIUSER_IMPLEMENTATION_PLAN.md  MigrationDockerNotes.md  PHASE0_SUMMARY.md  PLAN_EDITOR_UX_IMPROVEMENTS.md  PROJECT_ARCHITECTURE.md  PUBLIC_INDEX_REFACTOR.md  STORAGE_CONSOLIDATION_PLAN.md  Template_Manual.md  VARIABLE_SYSTEM.md  VERSION_MANAGEMENT.md
docs/examples/: plan.yaml  project.json
docs/examples/compiled/: compiled-20250921-193624.yaml  compiled-20250921-194102.yaml  compiled-20250921-194825.yaml  compiled-20250921-195041.yaml  compiled-20250921-195422.yaml  compiled-20250921-195703.yaml  compiled-20250921-195943.yaml  compiled-20250921-204749.yaml  compiled-20250921-205827.yaml  compiled-20250921-210049.yaml  compiled-20250921-210207.yaml  compiled-20250921-210338.yaml  compiled-20250921-210534.yaml  compiled-20250921-211850.yaml  compiled-20250921-212123.yaml  compiled-20250921-221034.yaml  latest.yaml
docs/examples/masters/: day.yaml  month.yaml  year.yaml
einkpdf-env/: pyvenv.cfg
frontend/: build.mjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/auth/: AuthContext.tsx  AuthProvider.tsx  types.ts
frontend/src/components/: Navigation.tsx  TemplateEditor.tsx  TemplateGallery.tsx
frontend/src/components/auth/: AuthLayout.tsx  LoginForm.tsx  LoginPage.tsx  PasswordResetConfirmForm.tsx  PasswordResetPage.tsx  PasswordResetRequestForm.tsx  RegisterForm.tsx  RegisterPage.tsx  UserAgreement.tsx
frontend/src/components/common/: ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/components/editor/: BatchPageModal.tsx  Canvas.tsx  CanvasWidget.tsx  CompilePanel.tsx  ContextMenu.tsx  DragOverlay.tsx  (+9 more)
frontend/src/lib/: fonts.ts  i18n.ts  snapping.ts  tokens.ts
frontend/src/pages/: AdminDashboard.tsx
frontend/src/services/: adminApi.ts  api.ts  auth.ts  planValidation.ts  public.ts  storage.ts  tokenRegistry.ts  version.ts  websocket.ts
frontend/src/stores/: auth.ts  editorStore.ts  projectStore.ts  public.ts
frontend/src/types/: index.ts  public.ts
old/: CURRENT_STATUS.md  MULTIPAGE_NAVIGATION_DESIGN.md
src/einkpdf/: __init__.py  cli.py  i18n.py
src/einkpdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/einkpdf/compiler/: build.py
src/einkpdf/core/: __init__.py  coordinates.py  deterministic.py  fonts.py  postprocess.py  preview.py  profiles.py  project_schema.py  renderer.py  schema.py  utils.py
src/einkpdf/services/: compilation_service.py  png_export_service.py  project_service.py
src/einkpdf/testing/: __init__.py  golden_files.py
src/einkpdf/validation/: __init__.py  yaml_validator.py
templates/: master_library.yaml  plan_example.yaml  sample_masters.yaml  sample_plan.yaml
tests/: test_backend.py  test_backend_services.py  test_basic_functionality.py  test_deterministic.py  test_golden_files.py  test_lines_final.yaml  test_lines_template.yaml  test_phase1_mvp.py  test_properties_template.yaml  test_template.yaml
tests/backend/: test_auth_projects.py
tests/golden/metadata/: basic_template_test.json
tools/: golden_file_cli.py  plan_compiler.py  test_full_year_compile.py  test_master_plan_compiler.py  test_simple_year.py
(+79 files in other folders)
